--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
 
 h1 {
   font-size: 48px; /* Made it larger for emphasis */
+  font-family: Verdana;
   margin-bottom: 10px;
   color: #8d8741;
 }
@@ -25,6 +26,20 @@ h2 {
   font-size: 24px;
   margin-bottom: 20px;
   color: #659dbd; /* Light color to contrast with the dark background */
+}
+
+h3 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #659dbd; /* Light color to contrast with the dark background */
+  text-decoration: underline;
+}
+
+h4 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #000000; /* Light color to contrast with the dark background */
+  text-decoration: underline;
 }
 
 /* Navbar base styling */
@@ -81,22 +96,21 @@ nav li ul li {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 60vh; /* Increasing the height a bit */
+  height: 80vh;
 }
 
 .bio-box {
-  background-color: transparent; 
-  padding: 10px;
-  text-align: center;
-  width: 50%;
-  background-color: #DAAD86; /* You can choose a background color if needed. */
+  background-color: #DAAD86; 
+  padding: 5px 5px 5px 5px; /* Increased right padding to 40px */
+  text-align: left; /* Changed text alignment to left */
+  width: 80%;
+  margin: 50px auto 0 auto;
 }
 
 .profile-picture {
-  height: 350px;
-  width: 225px;
+  height: 400px;
+  width: 300px;  /* Modified to match the height */
   margin-right: 20px;
-  border-radius: 50%; /* Making the image round */
   border: 3px solid white; /* White border for the image */
 }
 
@@ -154,4 +168,9 @@ code {
 
 .sql {
   color: #008080;
+}
+
+.shadow-header {
+  box-shadow: 0px -2px 5px 0px lightgrey;
+  background-color: #659dbd; /* You can choose a background color if needed. */
 }
